plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.tan.seminario'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven {
		url "https://repo.spring.io/release"
	}
	maven {
		url "https://packages.vmware.com/maven-repo/"
	}
}

ext {
	set('springCloudVersion', "2024.0.1")
	set('tanzuScgExtensionsVersion', "1.0.0")
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.5"
		// mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
		// mavenBom "com.vmware.tanzu.springcloudgateway.extensions:extensions-bom:${tanzuScgExtensionsVersion}"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	implementation 'org.hibernate.orm:hibernate-core'  // Hibernate Core lo puedes mantener si quieres la versión explícita

	runtimeOnly 'org.postgresql:postgresql'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.2'
	implementation("org.springframework.security:spring-security-core:6.4.4")

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Dependencias de JWT
	implementation group: 'com.auth0', name: 'java-jwt', version: '2.0.1'
	implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
	testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '6.1.5'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
}

tasks.named('test') {
	useJUnitPlatform()
}
